--- a/src/main/resources/static/add.html
+++ b/src/main/resources/static/add.html
@@ -36,34 +36,34 @@
                     <!-- Input field for name -->
                     <div class="mb-3">
                         <input type="text" id="firstname" name="firstname" class="form-control form-control-lg"
-                            placeholder="First Name">
+                            placeholder="First Name" required>
                     </div>
                     <!-- Input field for password -->
                     <div class="mb-3">
                         <input type="text" id="lastname" name="lastname" class="form-control form-control-lg"
-                            placeholder="Last Name">
+                            placeholder="Last Name" required>
                     </div>
                     <div class="mb-3">
                         <input type="number" id="weight" name="weight" class="form-control form-control-lg"
-                            placeholder="Student Weight">
+                            placeholder="Student Weight" required>
                     </div>
                     <div class="mb-3">
                         <input type="number" id="height" name="height" class="form-control form-control-lg"
-                            placeholder="Student Height">
+                            placeholder="Student Height" required>
                     </div>
                     <div class="mb-3">
                         <input type="text" id="haircolor" name="haircolor" class="form-control form-control-lg"
-                            placeholder="Student Hair Color">
+                            placeholder="Student Hair Color" required>
                     </div>
                     <!-- Input field for size -->
                     <div class="mb-3">
                         <input type="text" id="gpa" name="gpa" class="form-control form-control-lg"
-                            placeholder="Student GPA">
+                            placeholder="Student GPA" required>
                     </div>
 
                     <!-- Button for form submission -->
                     <div class="d-grid gap-2">
-                        <input type="submit" class="btn btn-primary" value="SEND">
+                        <input type="submit" class="btn btn-primary" value="SEND" >
                     </div>
             </div>
         </div>
